feature: 首页轮询图配置